projrct section update

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,15 +1,16 @@
 // setup
-@import './setup/variables';
-@import './setup/mixins';
-@import './setup/typograghy';
-@import './setup/helpers';
+@import "./setup/variables";
+@import "./setup/mixins";
+@import "./setup/typograghy";
+@import "./setup/helpers";
 // basic
-@import './basic/base';
+@import "./basic/base";
 // cmps
-@import './cmps/port-footer';
-@import './cmps/portfolio';
-@import './cmps/about';
-@import './cmps/specialities';
+@import "./cmps/port-footer";
+@import "./cmps/portfolio";
+@import "./cmps/about";
+@import "./cmps/specialities";
+@import "./cmps/projModal";
 // views
-@import './views/home';
-@import './views/app';
+@import "./views/home";
+@import "./views/app";
