--- a/src/assets/style/cmps/_about.scss
+++ b/src/assets/style/cmps/_about.scss
@@ -5,7 +5,7 @@
         text-transform: uppercase;
     }
     .about-content {
-        width: 100%;
+        width: 70%;
         text-align: left;
         img {
             width: 200px;
@@ -16,13 +16,14 @@
             border-radius: 20px;
         }
         > :nth-child(2) {
+            margin-left: 10px;
             flex-direction: column;
-            > * {
-                margin: 1em;
-                line-height: 1.35em;
+            line-height: 1.35em;
+            h4 {
+                margin-bottom: 10px;
             }
             p {
-                width: 60%;
+                width: 100%;
             }
         }
     }
@@ -48,6 +49,9 @@
             align-items: center;
         }
         > :nth-child(2) {
+            h4 {
+                margin-top: 10px;
+            }
             p {
                 width: 90%;
             }
@@ -63,6 +67,9 @@
             align-items: center;
         }
         > :nth-child(2) {
+            h4 {
+                margin-top: 10px;
+            }
             p {
                 width: 90%;
             }
