--- a/src/assets/style/cmps/_portfolio.scss
+++ b/src/assets/style/cmps/_portfolio.scss
@@ -8,20 +8,24 @@
     > p:first-of-type {
         margin-bottom: 1em;
     }
+}
+
+.proj-details-con {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
     ul {
-        display: grid;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 250px);
-        gap: 50px;
         li {
-            width: 100%;
-            height: 100%;
-            transition: 0.3s;
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: center;
-            a {
+            cursor: pointer;
+            margin: 10px;
+            transition: 0.2s;
+            > :first-child {
                 transition: 0.3s;
                 width: 100%;
                 height: 100%;
@@ -30,6 +34,7 @@
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
+                padding: 5px;
                 h3 {
                     text-transform: uppercase;
                 }
@@ -49,6 +54,7 @@
                     height: 80%;
                     max-height: 0;
                     transition: 0.5s;
+                    margin: 5px;
                     img {
                         object-fit: contain;
                         width: 100%;
@@ -56,13 +62,86 @@
                     }
                 }
                 &:hover {
-                    transform: translateY(-5%);
-                    > :nth-child(2) {
-                        max-height: 100%;
-                    }
+                    color: #fc5957;
                 }
             }
         }
+    }
+    > :nth-child(2) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 70%;
+        padding: 5px;
+        > * {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
+        > :first-child {
+            flex-direction: column;
+            height: 100px;
+            margin: 10px 0;
+            > *:not(:last-child) {
+                margin: 3px 0;
+            }
+        }
+        > :nth-child(2) {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            img {
+                width: 600px;
+                object-fit: contain;
+            }
+            button {
+                font-size: 20px;
+                padding: 10px;
+                &:hover {
+                    background-color: #fc5957;
+                }
+            }
+        }
+        > :nth-child(3) {
+            flex-direction: column;
+            height: 65px;
+            > :first-child {
+                margin: 5px 0;
+            }
+            a {
+                color: black;
+                text-decoration: none;
+                margin: 3px 0;
+                transition: 0.2s;
+                &:hover {
+                    color: #fc5957;
+                }
+            }
+        }
+    }
+}
+
+.bounce-enter-active {
+    animation: bounce-in 0.5s;
+}
+.bounce-leave-active {
+    animation: bounce-in 0.5s reverse;
+}
+
+@keyframes bounce-in {
+    0% {
+        transform: scale(0);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
     }
 }
 
@@ -70,9 +149,9 @@
     .portfolio-container {
         ul {
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(1, 250px);
+            grid-template-rows: repeat(2, 250px);
             li {
-                a {
+                > :first-child {
                     > :nth-child(2) {
                         max-height: 100%;
                     }
@@ -86,9 +165,9 @@
     .portfolio-container {
         ul {
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(1, 250px);
+            grid-template-rows: repeat(2, 250px);
             li {
-                a {
+                > :first-child {
                     > :nth-child(2) {
                         max-height: 100%;
                     }
@@ -106,7 +185,7 @@
         ul {
             grid-template-columns: repeat(1, 1fr);
             li {
-                a {
+                > :first-child {
                     > :nth-child(2) {
                         max-height: 100%;
                     }
@@ -123,9 +202,9 @@
     .portfolio-container {
         ul {
             grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(1, 200px);
+            grid-template-rows: repeat(4, 200px);
             li {
-                a {
+                > :first-child {
                     &:hover {
                         transform: translateY(0);
                     }
