--- a/src/assets/style/views/_home.scss
+++ b/src/assets/style/views/_home.scss
@@ -46,7 +46,7 @@
 
 .at-container-closed {
     position: fixed;
-    bottom: 5vh;
+    bottom: 6.1vh;
     right: 4vw;
     transition: 0.2s;
     .fa-at {
@@ -64,15 +64,15 @@
 
 .at-container-open {
     position: fixed;
-    bottom: 5vh;
-    right: 200px;
+    bottom: 6.1vh;
+    right: 265px;
     transition: 0.2s;
     .fa-at {
         font-size: 3em;
         cursor: pointer;
         border-radius: 50%;
         padding: 5px;
-        color: $clr1;
+        color: rgb(255, 255, 255);
         background-color: black;
     }
     &:hover {
@@ -88,6 +88,7 @@
     max-width: 18em;
     height: 100vh;
     padding-top: 3em;
+    padding-bottom: 3em;
     position: fixed;
     top: 0;
     right: 0;
