--- a/src/assets/style/cmps/_portfolio.scss
+++ b/src/assets/style/cmps/_portfolio.scss
@@ -70,63 +70,6 @@
             }
         }
     }
-    // > :nth-child(2) {
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     flex-direction: column;
-    //     width: 70%;
-    //     padding: 5px;
-    //     > * {
-    //         display: flex;
-    //         justify-content: center;
-    //         align-items: center;
-    //         width: 100%;
-    //     }
-    //     > :first-child {
-    //         flex-direction: column;
-    //         height: 100px;
-    //         margin: 10px 0;
-    //         > *:not(:last-child) {
-    //             margin: 3px 0;
-    //         }
-    //     }
-    //     > :nth-child(2) {
-    //         display: flex;
-    //         justify-content: space-between;
-    //         align-items: center;
-    //         img {
-    //             width: 600px;
-    //             object-fit: contain;
-    //         }
-    //         button {
-    //             font-size: 20px;
-    //             padding: 10px;
-    //             &:hover {
-    //                 background-color: #fc5957;
-    //             }
-    //         }
-    //     }
-    //     > :nth-child(3) {
-    //         flex-direction: column;
-    //         height: 65px;
-    //         > :first-child {
-    //             margin: 5px 0;
-    //         }
-    //         a {
-    //             color: black;
-    //             text-decoration: none;
-    //             margin: 3px 0;
-    //             transition: 0.2s;
-    //             &:hover {
-    //                 color: #fc5957;
-    //             }
-    //         }
-    //     }
-    // }
 }
 
 .bounce-enter-active {
@@ -160,6 +103,12 @@
                     }
                 }
             }
+        }
+    }
+    .proj-details-con {
+        flex-direction: column;
+        >* {
+            margin: 20px;
         }
     }
 }
