--- a/src/assets/style/views/_home.scss
+++ b/src/assets/style/views/_home.scss
@@ -81,9 +81,9 @@
 }
 
 .contact {
+    flex-direction: column;
     justify-content: start;
     align-items: center;
-    flex-direction: column;
     width: 20em;
     max-width: 18em;
     height: 100vh;
@@ -95,11 +95,13 @@
     background-color: $clr1;
     transition: 0.3s;
     overflow: hidden;
+    border-left: 1px solid rgba(128, 128, 128, 0.2);
     h1 {
         margin: 7px 0;
     }
     > :nth-child(2) {
         flex-direction: column;
+        justify-content: center;
         > * {
             margin: 7px 0;
             cursor: pointer;
@@ -113,13 +115,14 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        height: 80%;
         > * {
             margin: 7px 0;
         }
         > :last-child {
             width: 100%;
             justify-content: flex-end;
-            align-items: center;
+            align-items: flex-start;
         }
     }
 }
